# telemetria

./: .gitignore  CMakeLists.txt  hw_config.c  macros.h  mpu9250.c  mpu9250.h  mpuObject.cpp  mpuObject.h  sd_manager.cpp  sd_manager.h  telemetria.cpp
doc/: pines.txt
graph/: acelData.txt  anglesData.txt  app_graph.asv  app_graph.fig  app_graph.m  gyroData.txt
